fix: horizontal scroll. delete redundant css.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,10 @@
 html, body {
-  height: 100%;
-  width: 100%;
-  /*margin: 0;*/
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 /******  HEADER *********/
-.header-container {
-  padding-top: 20px;
-  margin: 0 auto;
-}
 .github-img-wrapper {
   height: 150px;
 }
@@ -28,20 +24,12 @@ html, body {
   height: auto:
 }
 
-
-.about-me-wrapper {
-  margin: 0 auto;
-}
 .about-me-img {
   margin: 0 auto;
 }
 
 
 /******** Projects *******/
-.projects-container{
-  margin: 0 auto;
-  padding-bottom: 20px;
-}
 .project-img-wrapper {
   padding: 15px;
 }
